testsuite/poke.pkl/sub-integers-overflow-diag-2.pk
/* { dg-do compile } */

var res
  = -(-0x7fff_ffff_ffff_ffff - 1) - 1; /* { dg-error "overflow" } */
